ALF-804 Дизайнбаг дашлета "договора"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2386 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-dashlet.css
+++ b/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-dashlet.css
@@ -35,3 +35,12 @@
 .dashlet .scrollableList {
     padding: 0;
 }
+
+.contracts .datagrid thead{
+    display:none;
+}
+
+.contracts .toolbar {
+    border-bottom: none;
+}
+
