ALF-817: Дизайнбаги АРМ "Договора"; view fix
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2401 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-list.css
+++ b/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-list.css
@@ -1,11 +1,12 @@
-.yui-gc .columnSize2 .column1 {
+.yui-gc .yui-u .columnSize2.grid {
+    margin: 10px 5px;
+}
+.yui-gc .yui-u .columnSize2 .column1 {
     width: 20%;
 }
-
-.yui-u .columnSize2 .column2 {
+.yui-gc .yui-u .columnSize2 .column2 {
     width: 78%;
 }
-
 .yui-gc div.first {
     width: 100%;
 }
