--- a/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-filter.css
+++ b/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-filter.css
@@ -6,14 +6,14 @@ h2.thin {
 .contracts-filter-panel {
     background-color: #F2F2F2;
     border: 1px solid #cbcbcb;
-    margin-right: -10px;
+    margin-right: -15px;
 }
 
 .status-button {
     border: 1px solid transparent;
     cursor: pointer;
     font: 14px Arial;
-    margin: 5px 0;
+    margin: 0 0 5px 0;
     text-decoration: none;
     float: left;
 }
@@ -23,14 +23,15 @@ h2.thin {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    position: relative;
 }
 
-.contracts-filter-panel .filterBlock{
-    margin-top: -5px;
-    margin-bottom: -5px;
+.contracts-filter-panel .filterBlock {
+    padding-left: 16px;
+    margin: 0;
 }
 
-.contracts-filter-panel a:hover{
+.contracts-filter-panel a:hover {
     text-decoration: underline;
 }
 
@@ -40,21 +41,25 @@ h2.thin {
     position: relative;
 }
 
-.yui-gd.grid
-{
+.yui-gd.grid {
     margin: 10px;
 }
 
 .total-tasks-count-right {
-    float: right;
-    background-image: url('/share/res/images/lecm-contracts/contracts-count-back.png');
-    height: 20px;
-    width: 20px;
+    width: 19px;
+    height: 19px;
+    line-height: 19px;
+    background: #969696;
+    position: absolute;
+    right: 0;
+    top: 0;
     text-align: center;
-    color: #FFFFFF;
+    vertical-align: middle;
+    color: #fff;
     font-weight: bold;
     font-size: 13px;
-    padding-top: 2px;
-    display: inline;
-    margin-top:3px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -o-border-radius: 5px;
+    border-radius: 5px;
 }
