[~] Изменены формы для рассторжения договора и изменения срока договора
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2402 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/components/document-metadata-form-edit.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-metadata-form-edit.css
@@ -67,3 +67,23 @@
 .yui-skin-lecmTheme .yui-panel .dashlet-metadata-edit div.set > div.form-field > input.formsCheckBox {
     margin-left: 200px;
 }
+
+.yui-skin-lecmTheme .yui-panel .form-metadata-edit div.form-field {
+    position: relative;
+}
+
+.yui-skin-lecmTheme .yui-panel .form-metadata-edit div.form-field > input.date-entry {
+    width: 140px;
+    margin-bottom: 16px;
+}
+.yui-skin-lecmTheme .yui-panel .form-metadata-edit div.form-field > input.date-entry + a {
+    float: left;
+}
+.yui-skin-lecmTheme .yui-panel .form-metadata-edit div.form-field > input.date-entry ~ div.format-info {
+    height: 16px;
+    line-height: 16px;
+    position: absolute;
+    top: 30px;
+    margin-left: 160px;
+}
+
