ALF-824: Изменение дизайна главной страницы;
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2417 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-main.css
+++ b/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-main.css
@@ -61,6 +61,9 @@
 #yui-main #lecm-content-ft {
     background: #f2f2f2;
 }
+#yui-main #doc-bd div.datalist-toolbar div.header-bar div.new-row span.first-child {
+    background-image: url("/share/res/images/lecm-contracts/add_16_green.png");
+}
 #yui-main #doc-bd div.datalist-toolbar div.header-bar div.new-row button {
     color: #669fc5;
 }
