ALF-824: Изменение дизайна главной страницы: аватар в активности
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2435 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-activity.css
+++ b/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-activity.css
@@ -10,6 +10,19 @@
 .dashlet.contracts-activity .body .row:first-of-type {
     padding-top: 10px;
 }
+.dashlet.contracts-activity .body .row div.avatar {
+    width: 32px;
+    margin: 0;
+    text-align: center;
+}
+.dashlet.contracts-activity .body .row div.avatar img {
+    max-width: 32px;
+    max-height: 50px;
+}
+.dashlet.contracts-activity .body .row div.content {
+    float: none;
+    margin: 0 0 0 40px;
+}
 
 .dashlet.contracts-activity.yui-resize .yui-resize-handle {
     z-index: 0;
