шаблоны отчётов перенесены из lecm-approval в lecm-contracts изменения внешнего вида отчётов todo: для отчёта "исполнительская дисциплина" не подхватывается период из параметров todo: для отчёта "лист согласования" надо прикрутить локализацию из properties-файлов для "результата согласования" документа и Согласующих
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2437 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/reportdefinitions/approval-discipline.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/approval-discipline.jrxml
@@ -7,7 +7,7 @@
 	<property name="dataSource2" value="org.nm.jr.extension.datasource.provider.JRCMISDataSourceProvider"/>
 	<style name="styleOdd" mode="Opaque" backcolor="#F4F5F5">
 		<conditionalStyle>
-			<conditionExpression><![CDATA[$V{REPORT_COUNT}%2 == 0]]></conditionExpression>
+			<conditionExpression><![CDATA[($V{REPORT_COUNT}%2 == 0) && false]]></conditionExpression>
 			<style backcolor="#E2DFD6"/>
 		</conditionalStyle>
 	</style>
@@ -32,6 +32,12 @@
 	<queryString language="SQL">
 		<![CDATA[select * from cm:documents]]>
 	</queryString>
+	<field name="col_Period.Start" class="java.util.Date">
+		<fieldDescription><![CDATA[Начало периода]]></fieldDescription>
+	</field>
+	<field name="col_Period.End" class="java.util.Date">
+		<fieldDescription><![CDATA[Конец периода]]></fieldDescription>
+	</field>
 	<field name="col_Employee.FirstName" class="java.lang.String">
 		<fieldDescription><![CDATA[Фамилия Сотрудника]]></fieldDescription>
 	</field>
@@ -62,54 +68,48 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="29" splitType="Stretch">
+		<band height="32" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="85bf28f5-7b1d-49a7-b2d0-e31f2a45de0c" stretchType="RelativeToBandHeight" x="0" y="0" width="802" height="29"/>
+				<reportElement uuid="85bf28f5-7b1d-49a7-b2d0-e31f2a45de0c" stretchType="RelativeToBandHeight" x="0" y="0" width="800" height="25"/>
 				<textElement>
-					<font fontName="DejaVu Sans" size="20" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<font fontName="DejaVu Sans Mono" size="14" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
-				<text><![CDATA[Исполнительская дисциплина по согласованиям за период]]></text>
+				<text><![CDATA[Исполнительская дисциплина по согласованиям]]></text>
 			</staticText>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="35" splitType="Stretch">
+		<band height="34" splitType="Stretch">
 			<property name="cmis.url" value="http://127.0.0.1:8080/alfresco/cmisatom"/>
 			<property name="cmis.binding_type" value="atompub"/>
 			<property name="cmis.user" value="admin"/>
 			<property name="cmis.password" value="111"/>
 			<textField>
-				<reportElement uuid="6df5d2b4-b246-429d-a894-8f1f1d716bbf" x="0" y="10" width="71" height="20"/>
+				<reportElement uuid="8232ed19-763a-4354-a29f-c9f649b31df8" x="0" y="0" width="800" height="25"/>
 				<textElement textAlignment="Left">
-					<font fontName="DejaVu Serif" pdfEncoding="Cp1251"/>
+					<font fontName="DejaVu Sans Mono" size="14" isBold="true" pdfEncoding="Cp1251"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Стр "+$V{PAGE_NUMBER}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement uuid="8232ed19-763a-4354-a29f-c9f649b31df8" x="83" y="10" width="238" height="20"/>
-				<textElement textAlignment="Left">
-					<font fontName="DejaVu Serif" pdfEncoding="Cp1251"/>
-				</textElement>
-				<textFieldExpression><![CDATA["С "+ $V{PERIOD_START} + ", по "+ $V{PERIOD_END}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["за период"+ ($F{col_Period.Start} != null ? msg( " с {0,date,short}", $F{col_Period.Start}) : "") + ($F{col_Period.End} != null ? msg( " по {0,date,short}", $F{col_Period.End}) : "")
+]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="33" splitType="Stretch">
+		<band height="30" splitType="Stretch">
 			<rectangle>
-				<reportElement uuid="e298a568-777a-4862-a417-1fbacbc1d93d" x="0" y="1" width="802" height="30" backcolor="#949E99"/>
+				<reportElement uuid="e298a568-777a-4862-a417-1fbacbc1d93d" x="0" y="1" width="800" height="29" backcolor="#DCDCDC"/>
 			</rectangle>
 			<textField>
 				<reportElement uuid="52e19f23-e656-451b-84d6-f210e47da030" isPrintRepeatedValues="false" x="3" y="3" width="30" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
-					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<font fontName="DejaVu Sans Mono" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["№"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement uuid="52e19f23-e656-451b-84d6-f210e47da030" isPrintRepeatedValues="false" x="35" y="3" width="150" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
-					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<font fontName="DejaVu Sans Mono" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
 				</textElement>
 				<textFieldExpression><![CDATA["ФИО Сотрудника"]]></textFieldExpression>
@@ -117,7 +117,7 @@
 			<textField isBlankWhenNull="true">
 				<reportElement uuid="8514e4c9-574d-4cbd-87f1-2afb80a884a2" isPrintRepeatedValues="false" x="188" y="3" width="180" height="26" isPrintInFirstWholeBand="true"/>
 				<textElement textAlignment="Center" verticalAlignment="Top" markup="none">
-					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<font fontName="DejaVu Sans Mono" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Должность Сотрудника"]]></textFieldExpression>
@@ -125,7 +125,7 @@
 			<textField isBlankWhenNull="true">
 				<reportElement uuid="ad617c43-79fd-4734-84d2-1e37958cfa8c" isPrintRepeatedValues="false" x="370" y="3" width="180" height="26" isPrintInFirstWholeBand="true"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
-					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<font fontName="DejaVu Sans Mono" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Отдел"]]></textFieldExpression>
@@ -133,7 +133,7 @@
 			<textField isBlankWhenNull="true">
 				<reportElement uuid="8ad34c1a-0436-4c27-9c1b-a84c2d955145" isPrintRepeatedValues="false" x="552" y="3" width="80" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
-					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<font fontName="DejaVu Sans Mono" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Кол-во просрочек"]]></textFieldExpression>
@@ -141,7 +141,7 @@
 			<textField isBlankWhenNull="true">
 				<reportElement uuid="0d56e8f5-5867-4897-97ab-c9f00c452f45" isPrintRepeatedValues="false" x="636" y="3" width="80" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
-					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<font fontName="DejaVu Sans Mono" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Средний срок согласования"]]></textFieldExpression>
@@ -149,21 +149,36 @@
 			<textField isBlankWhenNull="true">
 				<reportElement uuid="8e330edb-4053-4fa9-8b27-970e51dedebf" isPrintRepeatedValues="false" x="718" y="3" width="80" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
-					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<font fontName="DejaVu Sans Mono" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Средний срок просрочки"]]></textFieldExpression>
 			</textField>
+			<line>
+				<reportElement uuid="79d5ce15-304b-4e9c-8a1d-4ee40a6149f0" x="32" y="0" width="1" height="30"/>
+			</line>
+			<line>
+				<reportElement uuid="8087242f-4262-4e21-98af-02b1ef7a94fc" x="186" y="0" width="1" height="30"/>
+			</line>
+			<line>
+				<reportElement uuid="ea48cfa0-cc95-47c9-8438-307fa1919802" x="369" y="0" width="1" height="30"/>
+			</line>
+			<line>
+				<reportElement uuid="e3e63aef-94a4-43b8-9410-926c23d71e88" x="551" y="0" width="1" height="30"/>
+			</line>
+			<line>
+				<reportElement uuid="e72408b8-37d5-486a-880e-923a7a541df7" x="633" y="0" width="1" height="30"/>
+			</line>
+			<line>
+				<reportElement uuid="f8516707-1933-4cea-93f7-1e2ec38aa5fb" x="717" y="0" width="1" height="30"/>
+			</line>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="28" splitType="Stretch">
+		<band height="25" splitType="Stretch">
 			<printWhenExpression><![CDATA[$V{REPORT_COUNT} <= 200]]></printWhenExpression>
-			<rectangle>
-				<reportElement uuid="da1236f3-eb64-4274-9271-7c548fed2ae6" x="0" y="0" width="800" height="26"/>
-			</rectangle>
 			<frame>
-				<reportElement uuid="1e092e56-8305-48da-8ce3-c4deba187eda" style="styleOdd" x="2" y="2" width="798" height="23"/>
+				<reportElement uuid="1e092e56-8305-48da-8ce3-c4deba187eda" style="styleOdd" x="2" y="2" width="798" height="23" backcolor="#FFFFFF"/>
 				<textField isBlankWhenNull="true">
 					<reportElement uuid="d2014534-0ee4-43cb-82d6-fd1d4e4ed21a" x="1" y="2" width="30" height="20"/>
 					<textElement textAlignment="Center">
@@ -221,6 +236,33 @@
 					<textFieldExpression><![CDATA[$F{col_Employee.AvgMissed}]]></textFieldExpression>
 				</textField>
 			</frame>
+			<line>
+				<reportElement uuid="f9fbe77a-e5b8-4167-9458-648467082c84" x="0" y="0" width="1" height="24"/>
+			</line>
+			<line>
+				<reportElement uuid="f3cc4f7f-22dd-4f88-a785-1e9d8ab9afd8" x="32" y="0" width="1" height="24"/>
+			</line>
+			<line>
+				<reportElement uuid="b6872550-6d62-4e5c-9bc8-08b210c84078" x="186" y="0" width="1" height="24"/>
+			</line>
+			<line>
+				<reportElement uuid="886032f3-bc71-4d1e-88f7-fc997fdd0cf7" x="369" y="0" width="1" height="24"/>
+			</line>
+			<line>
+				<reportElement uuid="b3ab7f42-4a14-4de5-98f8-6851f199cd4e" x="551" y="0" width="1" height="24"/>
+			</line>
+			<line>
+				<reportElement uuid="3529cac3-3798-45a1-82a4-99acb3c68063" x="633" y="0" width="1" height="24"/>
+			</line>
+			<line>
+				<reportElement uuid="769a3c9b-3924-4a9f-83dd-ff1554fec788" x="717" y="0" width="1" height="24"/>
+			</line>
+			<line>
+				<reportElement uuid="3d329db8-9e15-4dcd-8eb7-e8e11b8942bf" x="800" y="0" width="1" height="24"/>
+			</line>
+			<line>
+				<reportElement uuid="2ec4bbbe-9901-4c10-9de5-fdee51acd4f7" x="0" y="24" width="800" height="1"/>
+			</line>
 		</band>
 	</detail>
 	<columnFooter>
@@ -228,12 +270,12 @@
 	</columnFooter>
 	<pageFooter>
 		<band height="34" splitType="Stretch">
-			<textField evaluationTime="Report">
-				<reportElement uuid="888bd866-9e3c-4f97-8400-35c02cadae9d" x="1" y="4" width="70" height="30"/>
-				<textElement>
-					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+			<textField>
+				<reportElement uuid="6df5d2b4-b246-429d-a894-8f1f1d716bbf" x="3" y="0" width="71" height="20"/>
+				<textElement textAlignment="Left">
+					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Стр "+$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageFooter>
