--- a/lecm-contracts/repo/src/main/config/reportdefinitions/approval-list.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/approval-list.jrxml
@@ -7,7 +7,7 @@
 	<property name="dataSource2" value="org.nm.jr.extension.datasource.provider.JRCMISDataSourceProvider"/>
 	<style name="styleOdd" mode="Opaque" backcolor="#F4F5F5">
 		<conditionalStyle>
-			<conditionExpression><![CDATA[$V{REPORT_COUNT}%2 == 0]]></conditionExpression>
+			<conditionExpression><![CDATA[($V{REPORT_COUNT}%2 == 0) && false]]></conditionExpression>
 			<style backcolor="#E2DFD6"/>
 		</conditionalStyle>
 	</style>
@@ -32,6 +32,7 @@
 	<queryString>
 		<![CDATA[select * from cm:documents]]>
 	</queryString>
+	
 	<field name="col_Doc.ProjectNum" class="java.lang.String">
 		<fieldDescription><![CDATA[Номер проекта договора]]></fieldDescription>
 	</field>
@@ -108,64 +109,64 @@
 			<staticText>
 				<reportElement uuid="85bf28f5-7b1d-49a7-b2d0-e31f2a45de0c" stretchType="RelativeToBandHeight" x="0" y="0" width="802" height="29"/>
 				<textElement textAlignment="Center">
-					<font fontName="DejaVu Sans" size="20" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<font fontName="DejaVu Sans Mono" size="14" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<text><![CDATA[Лист согласования]]></text>
 			</staticText>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="62" splitType="Stretch">
+		<band height="63" splitType="Stretch">
 			<property name="cmis.url" value="http://127.0.0.1:8080/alfresco/cmisatom"/>
 			<property name="cmis.binding_type" value="atompub"/>
 			<property name="cmis.user" value="admin"/>
 			<property name="cmis.password" value="111"/>
 			<textField>
-				<reportElement uuid="8232ed19-763a-4354-a29f-c9f649b31df8" x="3" y="0" width="795" height="20"/>
-				<textElement textAlignment="Center">
-					<font fontName="DejaVu Serif" pdfEncoding="Cp1251"/>
+				<reportElement uuid="8232ed19-763a-4354-a29f-c9f649b31df8" x="3" y="0" width="795" height="30"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="DejaVu Sans Mono" size="12" isBold="true" pdfEncoding="Cp1251"/>
 				</textElement>
 				<textFieldExpression><![CDATA["К договору проект № "+ $F{col_Doc.ProjectNum} + ", версия № "+ $F{col_AproveList.Version}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="92c94d2f-ae2f-45d6-826a-4fe022f0baa4" x="2" y="20" width="396" height="40"/>
-				<textElement textAlignment="Center">
-					<font fontName="DejaVu Serif" pdfEncoding="Cp1251"/>
+				<reportElement uuid="92c94d2f-ae2f-45d6-826a-4fe022f0baa4" x="2" y="31" width="396" height="30"/>
+				<textElement textAlignment="Center" verticalAlignment="Top">
+					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251"/>
 				</textElement>
-				<textFieldExpression><![CDATA["Исполнитель: "+ $F{col_ExecEmployee.FirstName}+ " "+ ($F{col_ExecEmployee.MiddleName} + " ").substring(0,1)+ "."+ (""+ $F{col_ExecEmployee.LastName}).substring(0,1)+ ", "+ $F{col_ExecEmployee.StaffPosition.Name} + ", "+ $F{col_Item.Employee.Unit.Name}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Исполнитель: "+ $F{col_ExecEmployee.LastName}+ " "+ ($F{col_ExecEmployee.MiddleName} + " ").substring(0,1)+ "."+ (""+ $F{col_ExecEmployee.FirstName}).substring(0,1)+ ", "+ $F{col_ExecEmployee.StaffPosition.Name} + ", "+ $F{col_Item.Employee.Unit.Name}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="57733b0b-8072-4194-ad89-e36d5cf70a4b" x="400" y="20" width="198" height="40"/>
-				<textElement>
-					<font fontName="DejaVu Serif" pdfEncoding="Cp1251"/>
+				<reportElement uuid="57733b0b-8072-4194-ad89-e36d5cf70a4b" x="400" y="31" width="198" height="30"/>
+				<textElement verticalAlignment="Top">
+					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Дата начала согласования:"]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy" isBlankWhenNull="false">
-				<reportElement uuid="0debf964-2b3a-47e5-9325-01ab4f577fd2" x="600" y="20" width="198" height="40"/>
-				<textElement>
-					<font fontName="DejaVu Serif" pdfEncoding="Cp1251"/>
+				<reportElement uuid="0debf964-2b3a-47e5-9325-01ab4f577fd2" x="600" y="31" width="198" height="30"/>
+				<textElement verticalAlignment="Top">
+					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{col_AproveList.ApproveStart}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="33" splitType="Stretch">
+		<band height="29" splitType="Stretch">
 			<rectangle>
-				<reportElement uuid="e298a568-777a-4862-a417-1fbacbc1d93d" x="0" y="1" width="802" height="30" backcolor="#949E99"/>
+				<reportElement uuid="e298a568-777a-4862-a417-1fbacbc1d93d" x="0" y="1" width="800" height="28" backcolor="#DCDCDC"/>
 			</rectangle>
 			<textField>
 				<reportElement uuid="52e19f23-e656-451b-84d6-f210e47da030" isPrintRepeatedValues="false" x="3" y="3" width="30" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
-					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<font fontName="DejaVu Sans Mono" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["№"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement uuid="52e19f23-e656-451b-84d6-f210e47da030" isPrintRepeatedValues="false" x="35" y="3" width="200" height="26"/>
 				<textElement textAlignment="Left" verticalAlignment="Top">
-					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<font fontName="DejaVu Sans Mono" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Согласующий"]]></textFieldExpression>
@@ -173,7 +174,7 @@
 			<textField isBlankWhenNull="true">
 				<reportElement uuid="8514e4c9-574d-4cbd-87f1-2afb80a884a2" isPrintRepeatedValues="false" x="238" y="3" width="160" height="26" isPrintInFirstWholeBand="true"/>
 				<textElement textAlignment="Left" verticalAlignment="Top" markup="none">
-					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<font fontName="DejaVu Sans Mono" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Результат Согласования"]]></textFieldExpression>
@@ -181,7 +182,7 @@
 			<textField isBlankWhenNull="true">
 				<reportElement uuid="ad617c43-79fd-4734-84d2-1e37958cfa8c" isPrintRepeatedValues="false" x="400" y="3" width="304" height="26" isPrintInFirstWholeBand="true"/>
 				<textElement textAlignment="Left" verticalAlignment="Top">
-					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<font fontName="DejaVu Sans Mono" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Замечания"]]></textFieldExpression>
@@ -189,21 +190,33 @@
 			<textField isBlankWhenNull="true">
 				<reportElement uuid="8ad34c1a-0436-4c27-9c1b-a84c2d955145" isPrintRepeatedValues="false" x="707" y="3" width="90" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
-					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<font fontName="DejaVu Sans Mono" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Дата согласования"]]></textFieldExpression>
 			</textField>
+			<line>
+				<reportElement uuid="ab9b1fbb-c17e-4ac0-8727-86464b45ae48" x="33" y="0" width="1" height="29"/>
+			</line>
+			<line>
+				<reportElement uuid="32c28a06-576c-407d-aaa4-5c406c4d913b" x="233" y="0" width="1" height="29"/>
+			</line>
+			<line>
+				<reportElement uuid="dc287e8e-5e02-4e74-b748-a91c4422df28" x="395" y="0" width="1" height="29"/>
+			</line>
+			<line>
+				<reportElement uuid="5b6d0115-f241-4433-9064-4b28fe16e551" x="703" y="0" width="1" height="29"/>
+			</line>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="28" splitType="Immediate">
+		<band height="26" splitType="Immediate">
 			<printWhenExpression><![CDATA[$V{REPORT_COUNT} <= 200]]></printWhenExpression>
-			<rectangle>
-				<reportElement uuid="da1236f3-eb64-4274-9271-7c548fed2ae6" x="0" y="0" width="800" height="26"/>
-			</rectangle>
+			<line>
+				<reportElement uuid="761758be-0e43-429b-8ca0-cd71cfc60d5f" x="0" y="25" width="801" height="1"/>
+			</line>
 			<frame>
-				<reportElement uuid="1e092e56-8305-48da-8ce3-c4deba187eda" style="styleOdd" x="2" y="2" width="798" height="23"/>
+				<reportElement uuid="1e092e56-8305-48da-8ce3-c4deba187eda" style="styleOdd" x="2" y="2" width="798" height="23" backcolor="#FFFFFF"/>
 				<textField isBlankWhenNull="true">
 					<reportElement uuid="d2014534-0ee4-43cb-82d6-fd1d4e4ed21a" x="1" y="2" width="30" height="20"/>
 					<textElement textAlignment="Center">
@@ -213,12 +226,12 @@
 					<textFieldExpression><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
 				</textField>
 				<textField isBlankWhenNull="true">
-					<reportElement uuid="d2014534-2ee4-43cb-82d6-fd1d4e4ed21d" x="33" y="2" width="200" height="20"/>
+					<reportElement uuid="d2014534-2ee4-43cb-82d6-fd1d4e4ed21d" x="34" y="2" width="198" height="20"/>
 					<textElement textAlignment="Left">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$F{col_Item.Employee.FirstName}+ " "+ ($F{col_Item.Employee.MiddleName}+ " ").substring( 0, 1 )+ "."+ ($F{col_Item.Employee.LastName}+ " ").substring(0,1) + ", "+ $F{col_Item.Employee.StaffPosition.Name} + ", "+ $F{col_Item.Employee.Unit.Name}]]></textFieldExpression>
+					<textFieldExpression><![CDATA[$F{col_Item.Employee.LastName}+ " "+ ($F{col_Item.Employee.MiddleName}+ " ").substring( 0, 1 )+ "."+ ($F{col_Item.Employee.FirstName}+ " ").substring(0,1) + ", "+ $F{col_Item.Employee.StaffPosition.Name} + ", "+ $F{col_Item.Employee.Unit.Name}]]></textFieldExpression>
 				</textField>
 				<textField pattern="dd/MM/yyyy" isBlankWhenNull="false">
 					<reportElement uuid="0540390a-1d4a-425e-94fd-cba55ad840b5" x="705" y="2" width="90" height="20"/>
@@ -237,7 +250,7 @@
 					<textFieldExpression><![CDATA[$F{col_Item.ApproveNotes}]]></textFieldExpression>
 				</textField>
 				<textField isBlankWhenNull="true">
-					<reportElement uuid="3174fdc4-62d4-46eb-9f49-d9fdcc29df25" x="236" y="2" width="160" height="20" isPrintInFirstWholeBand="true"/>
+					<reportElement uuid="3174fdc4-62d4-46eb-9f49-d9fdcc29df25" x="233" y="2" width="160" height="20" isPrintInFirstWholeBand="true"/>
 					<textElement textAlignment="Left">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
@@ -245,6 +258,24 @@
 					<textFieldExpression><![CDATA[$F{col_Item.ApproveResult}]]></textFieldExpression>
 				</textField>
 			</frame>
+			<line>
+				<reportElement uuid="e99b830f-4006-48dc-956a-8c36c8c84003" x="0" y="0" width="1" height="25"/>
+			</line>
+			<line>
+				<reportElement uuid="a132f0be-1c6c-495b-aa33-910ea8e4cfa2" x="33" y="0" width="1" height="25"/>
+			</line>
+			<line>
+				<reportElement uuid="496c9e03-84fb-42c4-891c-8284c84bd4a4" x="233" y="0" width="1" height="25"/>
+			</line>
+			<line>
+				<reportElement uuid="e029505f-e152-4820-adb0-d5926a77a516" x="395" y="0" width="1" height="25"/>
+			</line>
+			<line>
+				<reportElement uuid="36edc890-8ccf-4680-a12c-0de338d828ac" x="703" y="0" width="1" height="25"/>
+			</line>
+			<line>
+				<reportElement uuid="1c3a02a2-227e-47e4-8d87-2dc5fdb552df" x="800" y="0" width="1" height="25"/>
+			</line>
 		</band>
 	</detail>
 	<columnFooter>
@@ -252,21 +283,21 @@
 			<textField>
 				<reportElement uuid="d0f946b7-8631-4585-ae38-030f2ca941b3" x="402" y="0" width="396" height="17"/>
 				<textElement textAlignment="Left">
-					<font fontName="DejaVu Serif" pdfEncoding="Cp1251"/>
+					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Результат: "+$F{col_AproveList.ApproveResult}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="e219c235-6444-4008-97a2-6fc0d01e1bbd" x="402" y="18" width="198" height="17"/>
 				<textElement textAlignment="Left">
-					<font fontName="DejaVu Serif" pdfEncoding="Cp1251"/>
+					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Дата согласования по документу: "]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy" isBlankWhenNull="false">
 				<reportElement uuid="62759da2-8339-49e9-ac58-3c2503f28f06" x="600" y="18" width="198" height="17"/>
 				<textElement textAlignment="Left">
-					<font fontName="DejaVu Serif" pdfEncoding="Cp1251"/>
+					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{col_AproveList.ApproveEnd}]]></textFieldExpression>
 			</textField>
