--- a/lecm-contracts/repo/src/main/config/reportdefinitions/contracts-list.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/contracts-list.jrxml
@@ -7,7 +7,7 @@
 	<property name="dataSource2" value="org.nm.jr.extension.datasource.provider.JRCMISDataSourceProvider"/>
 	<style name="styleOdd" mode="Opaque" backcolor="#F4F5F5">
 		<conditionalStyle>
-			<conditionExpression><![CDATA[$V{REPORT_COUNT}%2 == 0]]></conditionExpression>
+			<conditionExpression><![CDATA[($V{REPORT_COUNT}%2 == 0) && false]]></conditionExpression>
 			<style backcolor="#E2DFD6"/>
 		</conditionalStyle>
 	</style>
@@ -89,11 +89,11 @@
 	<title>
 		<band height="29" splitType="Stretch">
 			<staticText>
-				<reportElement uuid="85bf28f5-7b1d-49a7-b2d0-e31f2a45de0c" stretchType="RelativeToBandHeight" x="0" y="0" width="555" height="29"/>
+				<reportElement uuid="85bf28f5-7b1d-49a7-b2d0-e31f2a45de0c" stretchType="RelativeToBandHeight" x="0" y="0" width="801" height="29"/>
 				<textElement>
-					<font fontName="DejaVu Sans" size="20" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<font fontName="DejaVu Sans Mono" size="14" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
-				<text><![CDATA[Договорная деятельность/Contracts]]></text>
+				<text><![CDATA[Договорная деятельность]]></text>
 			</staticText>
 		</band>
 	</title>
@@ -106,94 +106,115 @@
 			<textField>
 				<reportElement uuid="6df5d2b4-b246-429d-a894-8f1f1d716bbf" x="0" y="10" width="141" height="20"/>
 				<textElement textAlignment="Left">
-					<font fontName="DejaVu Serif" pdfEncoding="Cp1251"/>
+					<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Стр "+$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="33" splitType="Stretch">
+		<band height="32" splitType="Stretch">
 			<rectangle>
-				<reportElement uuid="e298a568-777a-4862-a417-1fbacbc1d93d" x="1" y="1" width="800" height="30" backcolor="#949E99"/>
+				<reportElement uuid="e298a568-777a-4862-a417-1fbacbc1d93d" x="1" y="1" width="799" height="30" backcolor="#DCDCDC"/>
 			</rectangle>
 			<textField>
 				<reportElement uuid="52e19f23-e656-451b-84d6-f210e47da030" isPrintRepeatedValues="false" x="5" y="3" width="30" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
-					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<font fontName="DejaVu Sans Mono" size="10" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["№"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="8514e4c9-574d-4cbd-87f1-2afb80a884a2" isPrintRepeatedValues="false" x="38" y="3" width="70" height="26" isPrintInFirstWholeBand="true"/>
 				<textElement textAlignment="Center" verticalAlignment="Top" markup="none">
-					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<font fontName="DejaVu Sans Mono" size="10" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Номер договора"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement uuid="ad617c43-79fd-4734-84d2-1e37958cfa8c" isPrintRepeatedValues="false" x="109" y="3" width="88" height="26" isPrintInFirstWholeBand="true"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
-					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<font fontName="DejaVu Sans Mono" size="10" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Контрагент"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="8ad34c1a-0436-4c27-9c1b-a84c2d955145" isPrintRepeatedValues="false" x="200" y="3" width="110" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
-					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<font fontName="DejaVu Sans Mono" size="10" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Вид договора"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="0d56e8f5-5867-4897-97ab-c9f00c452f45" isPrintRepeatedValues="false" x="312" y="3" width="148" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
-					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<font fontName="DejaVu Sans Mono" size="10" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Тема договора"]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
 				<reportElement uuid="8e330edb-4053-4fa9-8b27-970e51dedebf" isPrintRepeatedValues="false" x="462" y="3" width="68" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
-					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<font fontName="DejaVu Sans Mono" size="10" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Дата начала"]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
 				<reportElement uuid="1474ea49-0456-45c0-b1a1-745c3a43fd32" isPrintRepeatedValues="false" x="532" y="3" width="68" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
-					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<font fontName="DejaVu Sans Mono" size="10" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Дата завершения"]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy" isBlankWhenNull="false">
 				<reportElement uuid="563ebd11-e1ac-4300-b8c1-e4642fc8de4d" isPrintRepeatedValues="false" x="602" y="3" width="88" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
-					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<font fontName="DejaVu Sans Mono" size="10" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Исполнитель"]]></textFieldExpression>
 			</textField>
 			<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
 				<reportElement uuid="e7ccdb77-cdd6-4cb0-ad8f-2e9d222a9b0e" isPrintRepeatedValues="false" x="692" y="3" width="107" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
-					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<font fontName="DejaVu Sans Mono" size="10" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Статус"]]></textFieldExpression>
 			</textField>
+			<line>
+				<reportElement uuid="78d10133-2d29-4069-b91c-504a32934661" x="34" y="0" width="1" height="30"/>
+			</line>
+			<line>
+				<reportElement uuid="4133164b-c580-40e9-8e86-9e07fee9b342" x="106" y="0" width="1" height="30"/>
+			</line>
+			<line>
+				<reportElement uuid="af115643-3f47-483a-8105-dcc34847b049" x="198" y="0" width="1" height="30"/>
+			</line>
+			<line>
+				<reportElement uuid="8995aaf2-a1f8-4593-b9bd-1c076ce692f5" x="308" y="0" width="1" height="30"/>
+			</line>
+			<line>
+				<reportElement uuid="56ae79d3-e30a-4f27-a518-b279ac2da993" x="458" y="0" width="1" height="30"/>
+			</line>
+			<line>
+				<reportElement uuid="3c71b1c6-be1b-47d9-840b-01552089b6a5" x="528" y="0" width="1" height="30"/>
+			</line>
+			<line>
+				<reportElement uuid="c32b6c47-4755-4756-9686-15b0ac426288" x="598" y="0" width="1" height="30"/>
+			</line>
+			<line>
+				<reportElement uuid="f1ac5779-a77d-48d5-9b82-6161d34284d7" x="689" y="0" width="1" height="30"/>
+			</line>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="31" splitType="Stretch">
+		<band height="25" splitType="Stretch">
 			<printWhenExpression><![CDATA[$V{REPORT_COUNT} <= 200]]></printWhenExpression>
-			<rectangle>
-				<reportElement uuid="da1236f3-eb64-4274-9271-7c548fed2ae6" x="1" y="1" width="800" height="28"/>
-			</rectangle>
 			<frame>
-				<reportElement uuid="1e092e56-8305-48da-8ce3-c4deba187eda" style="styleOdd" x="1" y="2" width="797" height="24"/>
+				<reportElement uuid="1e092e56-8305-48da-8ce3-c4deba187eda" style="styleOdd" x="1" y="1" width="797" height="24" backcolor="#FFFFFF"/>
 				<textField pattern="" isBlankWhenNull="true">
 					<reportElement uuid="0540390a-1d4a-425e-94fd-cba55ad840b5" x="197" y="2" width="110" height="20" isPrintWhenDetailOverflows="true"/>
 					<textElement textAlignment="Center">
-						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+						<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" tabStopWidth="20"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{col_DocKind}]]></textFieldExpression>
@@ -201,7 +222,7 @@
 				<textField pattern="" isBlankWhenNull="true">
 					<reportElement uuid="5db5527c-1abb-4aad-a2d8-e699a7cede33" x="106" y="2" width="88" height="20" isPrintWhenDetailOverflows="true"/>
 					<textElement textAlignment="Center">
-						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+						<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" tabStopWidth="20"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{col_numContragent}+ " "+ $F{col_Contragent.name}+ " "+ $F{col_Contragent.phone}]]></textFieldExpression>
@@ -209,14 +230,14 @@
 				<textField pattern="" isBlankWhenNull="true">
 					<reportElement uuid="d2014534-0ee4-43cb-82d6-fd1d4e4ed21a" x="2" y="2" width="30" height="20" isPrintWhenDetailOverflows="true"/>
 					<textElement textAlignment="Center">
-						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+						<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
 				</textField>
 				<textField pattern="" isBlankWhenNull="true">
 					<reportElement uuid="3174fdc4-62d4-46eb-9f49-d9fdcc29df25" x="35" y="2" width="70" height="20" isPrintInFirstWholeBand="true" isPrintWhenDetailOverflows="true"/>
 					<textElement textAlignment="Right" markup="none">
-						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+						<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" tabStopWidth="20"/>
 					</textElement>
 					<textFieldExpression><![CDATA[( ($F{col_Regnum} != null && !"Не присвоено".equals($F{col_Regnum}) )? $F{col_Regnum} : "нет")]]></textFieldExpression>
@@ -224,7 +245,7 @@
 				<textField pattern="" isBlankWhenNull="false">
 					<reportElement uuid="18c1ff17-fd8f-495d-84a4-88e5e3b52b5d" x="309" y="2" width="148" height="20" isPrintWhenDetailOverflows="true"/>
 					<textElement textAlignment="Center">
-						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+						<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" tabStopWidth="20"/>
 					</textElement>
 					<textFieldExpression><![CDATA[( ($F{col_Theme.tname} != null) ? $F{col_Theme.tname} : "Code "+ $F{col_Theme.code} )]]></textFieldExpression>
@@ -232,7 +253,7 @@
 				<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
 					<reportElement uuid="16d04a8b-5f73-4f50-b514-aa24b6a8f501" x="459" y="2" width="68" height="20" isPrintWhenDetailOverflows="true"/>
 					<textElement textAlignment="Center">
-						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+						<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" tabStopWidth="20"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{col_DateStart}]]></textFieldExpression>
@@ -240,7 +261,7 @@
 				<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
 					<reportElement uuid="7fe3fbca-e8e2-431c-b0d1-35a9f6eba3e9" x="529" y="2" width="68" height="20" isPrintWhenDetailOverflows="true"/>
 					<textElement textAlignment="Center">
-						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+						<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" tabStopWidth="20"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{col_DateEnd}]]></textFieldExpression>
@@ -248,20 +269,53 @@
 				<textField pattern="" isBlankWhenNull="true">
 					<reportElement uuid="22eefe53-6554-492a-bcd3-2459eca02fce" x="599" y="2" width="88" height="20" isPrintWhenDetailOverflows="true"/>
 					<textElement textAlignment="Center">
-						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+						<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" tabStopWidth="20"/>
 					</textElement>
-					<textFieldExpression><![CDATA[$F{col_Creator}]]></textFieldExpression>
+					<textFieldExpression><![CDATA[$F{col_Executor_Family}+ " "+ ($F{col_Executor_Name}+ " ").substring( 0, 1 )+ "."+ ($F{col_Executor_Otchestvo}+ " ").substring(0,1)]]></textFieldExpression>
 				</textField>
 				<textField pattern="" isBlankWhenNull="true">
 					<reportElement uuid="b8fc6c50-c272-4fda-86c8-c18a502c3205" x="690" y="2" width="107" height="20" isPrintWhenDetailOverflows="true"/>
 					<textElement textAlignment="Center">
-						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+						<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" tabStopWidth="20"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{col_Status}]]></textFieldExpression>
 				</textField>
 			</frame>
+			<line>
+				<reportElement uuid="d905283e-8430-40da-a9e5-2d1ce6418c36" x="1" y="0" width="1" height="24"/>
+			</line>
+			<line>
+				<reportElement uuid="f8491e6d-c03d-466d-a8b0-058a93d6ba80" x="34" y="0" width="1" height="24"/>
+			</line>
+			<line>
+				<reportElement uuid="ef71b15b-efe5-4926-b096-8c9786654474" x="106" y="0" width="1" height="24"/>
+			</line>
+			<line>
+				<reportElement uuid="1bdd1785-4dc7-4a2a-b77e-71a909f87646" x="198" y="0" width="1" height="24"/>
+			</line>
+			<line>
+				<reportElement uuid="0d3d2469-117b-41ab-9e12-0b3c484ce915" x="308" y="0" width="1" height="24"/>
+			</line>
+			<line>
+				<reportElement uuid="450f5a30-0014-4ef3-8baf-1dbd28f4bb20" x="458" y="0" width="1" height="24"/>
+			</line>
+			<line>
+				<reportElement uuid="b19bf739-48c4-4cee-9307-3017c62db8b4" x="528" y="0" width="1" height="24"/>
+			</line>
+			<line>
+				<reportElement uuid="7d4e555d-fe40-4b37-81ff-00630410ab6e" x="598" y="0" width="1" height="24"/>
+			</line>
+			<line>
+				<reportElement uuid="6d1be23d-a96f-4baa-ba18-8b7bdcd85602" x="800" y="0" width="1" height="24"/>
+			</line>
+			<line>
+				<reportElement uuid="917c373a-1df3-463a-beeb-90f1ef2be3e5" x="689" y="0" width="1" height="24"/>
+			</line>
+			<line>
+				<reportElement uuid="bc08800b-04f4-43ff-8c4a-42f678381a74" x="0" y="24" width="800" height="1"/>
+			</line>
 		</band>
 	</detail>
 	<columnFooter>
@@ -272,7 +326,7 @@
 			<textField evaluationTime="Report">
 				<reportElement uuid="888bd866-9e3c-4f97-8400-35c02cadae9d" x="1" y="4" width="70" height="30"/>
 				<textElement>
-					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
